JacksonRiver-salesforce/jra/src/objects/JRA_Advocacy_Endpoint_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Store endpoint settings and credentials for Advocacy Update API</description>
    <fields>
        <fullName>Access_Expiration_Date_Time__c</fullName>
        <description>When does Access Token expire?</description>
        <inlineHelpText>When does Access Token expire?</inlineHelpText>
        <label>Access Expiration Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Access_Token__c</fullName>
        <inlineHelpText>Current Access Token - check refresh time to ensure still valid</inlineHelpText>
        <label>Current Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Endpoint to use for Service</description>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <label>JRA Advocacy Endpoint Settings</label>
</CustomObject>